--- a/layouts/partials/contactmenu.html
+++ b/layouts/partials/contactmenu.html
@@ -1,46 +1,52 @@
 <div class="pf-v6-c-dropdown pf-m-expanded">
   <button
-    class="pf-v6-c-dropdown__toggle pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding"
+    class="pf-v6-c-menu-toggle pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding"
     id="{{ .ID }}-expanded-button"
     aria-expanded="false"
     type="button"
   >
-    <span class="pf-v6-c-dropdown__toggle-text">
+    <span class="pf-v6-c-menu-toggle__text">
       <i class="fas fa-users pf-v6-u-mr-xs" aria-hidden="true"></i>
       Socials
     </span>
-    <span class="pf-v6-c-dropdown__toggle-icon">
+    <span class="pf-v6-c-menu-toggle__controls"
+      ><span class="pf-v6-c-menu-toggle__toggle-icon"></span>
       <i class="fas fa-caret-down" aria-hidden="true"></i>
     </span>
   </button>
 
-  <ul
-    class="pf-v6-c-dropdown__menu"
+  <div
+    class="pf-v6-c-menu"
     id="{{ .ID }}-dropdown-menu"
     aria-labelledby="{{ .ID }}-expanded-button"
     hidden
   >
-    {{ range .Socials }}
-      {{ if .separator }}
-        <li class="pf-v6-c-divider" role="separator"></li>
-      {{ else }}
-        <li>
-          <a
-            class="pf-v6-c-dropdown__menu-item"
-            href="{{ if .unsafe }}
-              {{ safeURL .link }}
-            {{ else }}
-              {{ .link }}
-            {{ end }}"
-            target="_blank"
-            rel="noopener"
-          >
-            {{ .title }}
-          </a>
-        </li>
-      {{ end }}
-    {{ end }}
-  </ul>
+    <div class="pf-v6-c-menu__content">
+      <ul role="menu" class="pf-v6-c-menu__list">
+        {{ range .Socials }}
+          {{ if .separator }}
+            <li class="pf-v6-c-divider" role="separator"></li>
+          {{ else }}
+            <li class="pf-v6-c-menu__list-item" role="none">
+              <a
+                class="pf-v6-c-menu__item"
+                role="menuitem"
+                href="{{ if .unsafe }}
+                  {{ safeURL .link }}
+                {{ else }}
+                  {{ .link }}
+                {{ end }}"
+                target="_blank"
+                rel="noopener"
+              >
+                {{ .title }}
+              </a>
+            </li>
+          {{ end }}
+        {{ end }}
+      </ul>
+    </div>
+  </div>
 </div>
 
 <noscript>Please enable JavaScript to view the contact menu.</noscript
