--- a/layouts/index.html
+++ b/layouts/index.html
@@ -77,19 +77,21 @@
       <figure
         class="pf-v6-l-grid__item pf-m-12-col pf-m-2-col-on-lg pf-v6-u-display-flex pf-v6-u-flex-direction-column pf-v6-u-align-items-center pf-v6-u-justify-content-center pf-v6-u-p-lg pf-v6-u-p-0-on-lg"
       >
-        <figcaption class="pf-v6-x-c-avatar__figcaption">
-          <div class="pf-v6-c-chip">
-            <span class="pf-v6-c-chip__text"
-              >{{ .Site.Data.person.pronouns }}</span
-            >
-          </div>
-        </figcaption>
-
         <img
           src="{{ .Site.Data.person.img }}"
           alt="Profile picture of {{ .Site.Data.person.name }}"
           class="pf-v6-c-avatar pf-m-xl pf-v6-c-avatar--main"
         />
+
+        <figcaption class="pf-v6-x-c-avatar__figcaption">
+          <div class="pf-v6-c-label">
+            <div class="pf-v6-c-label__content">
+              <span class="pf-v6-c-label__text"
+                >{{ .Site.Data.person.pronouns }}</span
+              >
+            </div>
+          </div>
+        </figcaption>
       </figure>
 
       <div
@@ -151,7 +153,9 @@
                                 />
                               </div>
                             </div>
-                            <div class="pf-v6-c-card__title pf-v6-u-pt-md pf-v6-u-pb-sm">
+                            <div
+                              class="pf-v6-c-card__title pf-v6-u-pt-md pf-v6-u-pb-sm"
+                            >
                               {{ .Title }}
                             </div>
                             {{ if .Params.Excerpt }}
@@ -170,7 +174,10 @@
                 {{ end }}
               </ul>
 
-              <a href="/articles" class="pf-v6-c-button pf-m-link pf-v6-u-mt-lg">
+              <a
+                href="/articles"
+                class="pf-v6-c-button pf-m-link pf-v6-u-mt-lg"
+              >
                 <span class="pf-v6-c-button__icon pf-m-start">
                   <i class="fas fa-arrow-right" aria-hidden="true"></i> </span
                 >All articles</a
@@ -214,7 +221,9 @@
                     >
                       {{ .title }}
                     </h3>
-                    <div class="pf-v6-l-gallery pf-m-gutter pf-v6-l-gallery--max-500">
+                    <div
+                      class="pf-v6-l-gallery pf-m-gutter pf-v6-l-gallery--max-500"
+                    >
                       {{ range sort .projects "stars" "desc" }}
                         <div class="pf-v6-l-gallery__item">
                           <a
@@ -262,22 +271,28 @@
                               <div class="pf-v6-c-card__body">
                                 <p class="pf-v6-u-mb-md">{{ .description }}</p>
 
-                                <div class="pf-v6-c-chip-group">
-                                  <div class="pf-v6-c-chip-group__main">
+                                <div class="pf-v6-c-label-group">
+                                  <div class="pf-v6-c-label-group__main">
                                     <ul
-                                      class="pf-v6-c-chip-group__list"
+                                      class="pf-v6-c-label-group__list"
                                       role="list"
                                       aria-label="Topic list"
                                     >
                                       {{ range first 3 .topics }}
-                                        <li class="pf-v6-c-chip-group__list-item">
-                                          <div
-                                            class="pf-v6-c-chip pf-v6-c-chip--transparent"
+                                        <li
+                                          class="pf-v6-c-label-group__list-item"
+                                        >
+                                          <span
+                                            class="pf-v6-c-label pf-v6-c-label--transparent"
                                           >
-                                            <span class="pf-v6-c-chip__text"
-                                              >{{ . }}</span
+                                            <span
+                                              class="pf-v6-c-label__content"
                                             >
-                                          </div>
+                                              <span class="pf-v6-c-label__text">
+                                                {{ . }}
+                                              </span>
+                                            </span>
+                                          </span>
                                         </li>
                                       {{ end }}
                                     </ul>
@@ -323,7 +338,9 @@
                                       class="fas fa-star"
                                       aria-hidden="true"
                                     ></i>
-                                    <span class="pf-v6-u-ml-sm">{{ .stars }}</span>
+                                    <span class="pf-v6-u-ml-sm"
+                                      >{{ .stars }}</span
+                                    >
                                   </div>
                                   <div
                                     class="pf-v6-u-display-flex pf-v6-u-align-items-center pf-v6-u-justify-content-center pf-v6-u-mr-sm"
@@ -332,7 +349,9 @@
                                       class="fas fa-code-branch"
                                       aria-hidden="true"
                                     ></i>
-                                    <span class="pf-v6-u-ml-sm">{{ .forks }}</span>
+                                    <span class="pf-v6-u-ml-sm"
+                                      >{{ .forks }}</span
+                                    >
                                   </div>
                                   <div
                                     class="pf-v6-u-display-flex pf-v6-u-align-items-center pf-v6-u-justify-content-center"
