--- a/layouts/partials/lastcommit.html
+++ b/layouts/partials/lastcommit.html
@@ -4,7 +4,7 @@
 >
   <div class="pf-v6-c-card__body pf-v6-u-p-0 pf-v6-u-display-flex">
     <a
-      class="lastcommit__user__url pf-v6-x-u-hoverable pf-v6-x-u-hoverable--rotate"
+      class="lastcommit__user__url pf-v6-u-display-flex pf-v6-x-u-hoverable pf-v6-x-u-hoverable--rotate"
       target="_blank"
     >
       <img
