--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -175,6 +175,16 @@ $bg: "/img/bg.webp";
   transform: scale(1.1);
 }
 
+.pf-v6-c-card.pf-m-clickable {
+  border: var(--pf-t--global--border--width--box--default)
+    var(--pf-v6-c-card--BorderStyle) var(--pf-t--global--border--color--default);
+
+  &:hover,
+  &:focus {
+    border-color: var(--pf-v6-c-card--m-selectable--hover--BorderColor);
+  }
+}
+
 .pf-v6-c-card__header-main__img {
   width: 100%;
   height: 300px;
@@ -446,6 +456,10 @@ $bg: "/img/bg.webp";
 
 .pf-v6-c-card__title > h2 {
   font-weight: var(--pf-v6-c-card__title--FontWeight) !important;
+}
+
+.pf-v6-u-color-100 {
+  color: #232323; // We don't have grey tones in PatternFly v6 yet
 }
 
 .pf-v6-u-color-200 {
