--- a/layouts/partials/blueskyfeed.html
+++ b/layouts/partials/blueskyfeed.html
@@ -5,19 +5,21 @@
   <div
     class="pf-v6-c-card__title pf-v6-l-flex pf-m-justify-content-space-between pf-m-align-items-center pf-v6-u-py-xl"
   >
-    <span>My Skyline</span>
+    <div class="pf-v6-c-card__title-text">
+      <span>My Skyline</span>
 
-    {{ if not .Construction }}
-      <a
-        target="_blank"
-        class="twitterfeed__user__url pf-v6-l-flex pf-m-align-items-center"
-      >
-        <img
-          src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
-          alt="Bluesky follower count"
-        />
-      </a>
-    {{ end }}
+      {{ if not .Construction }}
+        <a
+          target="_blank"
+          class="twitterfeed__user__url pf-v6-l-flex pf-m-align-items-center"
+        >
+          <img
+            src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
+            alt="Bluesky follower count"
+          />
+        </a>
+      {{ end }}
+    </div>
   </div>
   <div class="pf-v6-c-card__body twitterfeed">
     {{ if .Construction }}
@@ -44,7 +46,10 @@
         class="twitterfeed__tweets pf-v6-l-flex pf-m-column pf-m-space-items-sm"
       ></ul>
 
-      <a target="_blank" class="twitterfeed__user__url pf-v6-c-button pf-m-link">
+      <a
+        target="_blank"
+        class="twitterfeed__user__url pf-v6-c-button pf-m-link"
+      >
         <span class="pf-v6-c-button__icon pf-m-start">
           <i class="fas fa-arrow-right" aria-hidden="true"></i> </span
         >All skeets</a
@@ -73,7 +78,7 @@
   // Tweets
   blueskyFeed.posts.map((tweet) => {
     const root = document.createElement("li");
-    root.classList.add("pf-v6-c-card", "pf-m-plain", "pf-m-hoverable-raised")
+    root.classList.add("pf-v6-c-card", "pf-m-plain", "pf-m-clickable")
 
     const link = document.createElement("a");
     link.target = "_blank";
