--- a/layouts/partials/twitterfeed.html
+++ b/layouts/partials/twitterfeed.html
@@ -5,19 +5,21 @@
   <div
     class="pf-v6-c-card__title pf-v6-l-flex pf-m-justify-content-space-between pf-m-align-items-center pf-v6-u-py-xl"
   >
-    <span>Latest tweets</span>
+    <div class="pf-v6-c-card__title-text">
+      <span>Latest tweets</span>
 
-    {{ if not .Construction }}
-      <a
-        target="_blank"
-        class="twitterfeed__user__url pf-v6-l-flex pf-m-align-items-center"
-      >
-        <img
-          src="https://img.shields.io/twitter/follow/{{ .Username }}?label={{ printf `%s%s` `@` .Username }}&style=social"
-          alt="Twitter badge"
-        />
-      </a>
-    {{ end }}
+      {{ if not .Construction }}
+        <a
+          target="_blank"
+          class="twitterfeed__user__url pf-v6-l-flex pf-m-align-items-center"
+        >
+          <img
+            src="https://img.shields.io/twitter/follow/{{ .Username }}?label={{ printf `%s%s` `@` .Username }}&style=social"
+            alt="Twitter badge"
+          />
+        </a>
+      {{ end }}
+    </div>
   </div>
   <div class="pf-v6-c-card__body twitterfeed">
     {{ if .Construction }}
@@ -103,7 +105,7 @@
   // Tweets
   twitterFeed.tweets.map((tweet) => {
     const root = document.createElement("li");
-    root.classList.add("pf-v6-c-card", "pf-m-plain", "pf-m-hoverable-raised")
+    root.classList.add("pf-v6-c-card", "pf-m-plain", "pf-m-clickable")
 
     const link = document.createElement("a");
     link.target = "_blank";
