--- a/layouts/partials/mastodonfeed.html
+++ b/layouts/partials/mastodonfeed.html
@@ -5,21 +5,19 @@
   <div
     class="pf-v6-c-card__title pf-v6-l-flex pf-m-justify-content-space-between pf-m-align-items-center pf-v6-u-py-xl"
   >
-    <div class="pf-v6-c-card__title-text">
-      <span>Latest Toots</span>
+    <span class="pf-v6-c-card__title-text">Latest Toots</span>
 
-      {{ if not .Construction }}
-        <a
-          target="_blank"
-          class="twitterfeed__user__url pf-v6-l-flex pf-m-align-items-center"
-        >
-          <img
-            src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
-            alt="Mastodon follower count"
-          />
-        </a>
-      {{ end }}
-    </div>
+    {{ if not .Construction }}
+      <a
+        target="_blank"
+        class="twitterfeed__user__url pf-v6-l-flex pf-m-align-items-center"
+      >
+        <img
+          src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
+          alt="Mastodon follower count"
+        />
+      </a>
+    {{ end }}
   </div>
   <div class="pf-v6-c-card__body twitterfeed">
     {{ if .Construction }}
@@ -78,7 +76,7 @@
   // Tweets
   mastodonFeed.toots.map((tweet) => {
     const root = document.createElement("li");
-    root.classList.add("pf-v6-c-card", "pf-m-plain", "pf-m-hoverable-raised")
+    root.classList.add("pf-v6-c-card", "pf-m-plain", "pf-m-clickable")
 
     const link = document.createElement("a");
     link.target = "_blank";
