--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -14,7 +14,7 @@
 
 
     <section
-      class="pf-v6-c-page__main-section pf-m-fill pf-v6-x-u-transparent pf-v6-c-page__main-section--max-width pf-v6-u-px-md pf-v6-u-px-0-on-xl pf-v6-u-py-md"
+      class="pf-v6-c-page__main-section pf-m-fill pf-v6-x-u-transparent pf-v6-x-u-borderless pf-v6-c-page__main-section--max-width pf-v6-u-px-md pf-v6-u-px-0-on-xl pf-v6-u-py-md"
     >
       <div class="pf-v6-c-page__main">
         <div class="pf-v6-l-gallery pf-m-gutter pf-v6-l-gallery--max-350">
