--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,7 +11,7 @@
     id="main"
   >
     <section
-      class="pf-v6-c-page__main-section pf-m-fill pf-v6-x-u-transparent pf-v6-c-page__main-section--max-width pf-v6-u-px-0 pf-v6-u-pb-0 pf-v6-u-pt-0 pf-v6-u-pt-md-on-xl"
+      class="pf-v6-c-page__main-section pf-m-fill pf-v6-x-u-transparent pf-v6-x-u-borderless pf-v6-c-page__main-section--max-width pf-v6-u-px-0 pf-v6-u-pb-0 pf-v6-u-pt-0 pf-v6-u-pt-md-on-xl"
     >
       <div class="pf-v6-c-page__main pf-v6-c-content">
         <div class="pf-v6-c-card pf-v6-c-card--full-width-lg">
