--- a/layouts/index.html
+++ b/layouts/index.html
@@ -206,7 +206,7 @@
     {{ if .Site.Data.integrations.github.projects }}
       <section id="projects">
         <div
-          class="pf-v6-c-card pf-v6-u-px-lg pf-v6-u-px-0-on-xl pf-v6-u-mt-xl pf-v6-x-u-transparent pf-v6-x-u-no-shadow"
+          class="pf-v6-c-card pf-v6-u-px-lg pf-v6-u-px-0-on-xl pf-v6-u-mt-xl pf-v6-x-u-transparent pf-v6-x-u-borderless pf-v6-x-u-no-shadow"
         >
           <div class="pf-v6-x-c-projects--max-width">
             <div
