--- a/layouts/partials/lastcommit.html
+++ b/layouts/partials/lastcommit.html
@@ -14,7 +14,7 @@
     </a>
 
     <div class="lastcommit">
-      <div class="pf-v6-c-code-block pf-v6-x-u-transparent pf-v6-u-p-sm pf-v6-u-pl-xs">
+      <div class="pf-v6-c-code-block pf-v6-x-u-transparent pf-v6-x-u-borderless pf-v6-u-p-sm pf-v6-u-pl-xs">
         <div class="pf-v6-c-code-block__header">
           <div
             class="pf-v6-c-code-block__actions pf-v6-c-code-block__actions--info pf-v6-u-flex-direction-column pf-v6-u-flex-direction-row-on-lg"
