--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -178,11 +178,20 @@ $bg: "/img/bg.webp";
 }
 
 .pf-v6-c-card.pf-m-clickable {
-  border: var(--pf-t--global--border--width--box--default)
-    var(--pf-v6-c-card--BorderStyle) var(--pf-t--global--border--color--default);
+  &:not(.pf-m-plain) {
+    border: var(--pf-t--global--border--width--box--default)
+      var(--pf-v6-c-card--BorderStyle)
+      var(--pf-t--global--border--color--default);
+  }
 
   &:hover,
   &:focus {
+    &.pf-m-plain {
+      border: var(--pf-t--global--border--width--box--default)
+        var(--pf-v6-c-card--BorderStyle)
+        var(--pf-v6-c-card--m-selectable--hover--BorderColor);
+    }
+
     border-color: var(--pf-v6-c-card--m-selectable--hover--BorderColor);
   }
 }
