--- a/layouts/partials/twitterfeed.html
+++ b/layouts/partials/twitterfeed.html
@@ -102,13 +102,13 @@
 
   // Tweets
   twitterFeed.tweets.map((tweet) => {
-    const root = document.createElement("li");
-    root.classList.add("pf-v6-c-card", "pf-m-plain", "pf-m-clickable")
+    const root = document.createElement("li")
 
-    const link = document.createElement("a");
-    link.target = "_blank";
-    link.href = tweet.url;
-    link.classList.add("pf-v6-u-color-100", "pf-v6-l-flex", "pf-v6-u-flex-direction-column", "pf-m-space-items-sm", "pf-m-align-items-flex-start", "pf-v6-c-card__body", "pf-v6-u-p-md", "pf-v6-x-m-no-decoration")
+    const card = document.createElement("a");
+    card.classList.add("pf-v6-c-card", "pf-m-plain", "pf-m-clickable")
+    card.target = "_blank";
+    card.href = tweet.url;
+    card.classList.add("pf-v6-u-color-100", "pf-v6-l-flex", "pf-v6-u-flex-direction-column", "pf-m-space-items-sm", "pf-m-align-items-flex-start", "pf-v6-c-card__body", "pf-v6-u-p-md", "pf-v6-x-m-no-decoration")
 
     const header = document.createElement("div")
     header.classList.add("pf-v6-u-mb-sm", "pf-v6-l-flex", "pf-m-align-items-center")
@@ -133,7 +133,7 @@
 
     header.appendChild(usernames);
 
-    link.appendChild(header)
+    card.appendChild(header)
 
     const content = document.createElement("div")
     content.classList.add("pf-v6-u-w-100")
@@ -149,9 +149,9 @@
 
     content.appendChild(tweetBody);
 
-    link.append(content)
+    card.appendChild(content);
 
-    root.appendChild(link);
+    root.append(card);
 
     document.querySelector("#{{ .ID }} .twitterfeed__tweets").appendChild(root);
   });
