--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -687,5 +687,9 @@ a.pf-v6-c-button.pf-m-primary,
 }
 
 .pf-v6-c-page {
-  display: flex;
+  display: block;
+}
+
+.pf-v6-c-page__main {
+  min-height: 100%;
 }
