feat: Add proper styling to new header bar

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -251,6 +251,7 @@ $bg: "/img/bg.webp";
   &.pf-v6-c-page__header--overlay--index {
     position: relative;
     margin: 0 auto;
+    margin-bottom: -100px;
   }
 }
 
