--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
 
 
       <div
-        class="pf-v6-u-display-flex pf-v6-u-align-items-center pf-v6-u-pr-sm pf-v6-u-pr-0-on-xl {{ if not .Site.Data.integrations.spotify.enabled }}
+        class="pf-v6-u-display-flex pf-v6-u-align-items-center pf-v6-u-pl-sm pf-v6-u-mr-lg pf-v6-u-mr-0-on-xl {{ if not .Site.Data.integrations.spotify.enabled }}
           pf-v6-u-ml-auto
         {{ end }}"
       >
