feat: Support dark mode for freestanding buttons

--- a/layouts/partials/contactmenu.html
+++ b/layouts/partials/contactmenu.html
@@ -1,6 +1,6 @@
 <div class="pf-v6-c-dropdown pf-m-expanded">
   <button
-    class="pf-v6-c-menu-toggle pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding"
+    class="pf-v6-c-menu-toggle pf-v6-x-u-text-shadow-sm"
     id="{{ .ID }}-expanded-button"
     aria-expanded="false"
     type="button"
