--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -388,6 +388,13 @@ $bg: "/img/bg.webp";
   .pf-v6-x-u-text--freestanding {
     text-shadow: 0 0 4px var(--pf-t--color--black);
     color: var(--pf-t--color--white) !important;
+    --pf-v6-c-button__icon--Color: var(--pf-t--color--white) !important;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .pf-v6-x-u-icon--freestanding {
+    --pf-v6-c-button__icon--Color: var(--pf-t--color--white) !important;
   }
 }
 
@@ -493,9 +500,7 @@ $bg: "/img/bg.webp";
 }
 
 .pf-v6-u-color-200 {
-  @media (prefers-color-scheme: dark) {
-    color: var(--pf-v6-global--Color--300) !important;
-  }
+  color: #414141; // We don't have grey tones in PatternFly v6 yet
 }
 
 .fireworks,
