feat: Center-align project cards on small screen spaces

--- a/layouts/articles/single.html
+++ b/layouts/articles/single.html
@@ -56,7 +56,7 @@
                       {{ .Params.Updated | time.Format ":date_long" }}</span
                     >
                   </div>
-                  <div class="pf-v6-c-label-group pf-v6-u-mt-md">
+                  <div class="pf-v6-c-label-group">
                     <div class="pf-v6-c-label-group__main">
                       <ul
                         class="pf-v6-c-label-group__list"
