--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,7 +20,9 @@
             rel="noopener"
             class="pf-v6-c-button pf-v6-c-button--header pf-v6-x-u-text-shadow-sm pf-v6-x-u-text--freestanding pf-m-plain pf-v6-u-ml-sm"
           >
-            <span class="pf-v6-c-button__icon pf-m-start">
+            <span
+              class="pf-v6-c-button__icon pf-m-start pf-v6-x-u-icon--freestanding"
+            >
               <i class="{{ .icon }}" aria-hidden="true"></i> </span
             >{{ .title }}</a
           >
@@ -275,7 +277,9 @@
                                 </div>
                               </div>
 
-                              <div class="pf-v6-c-card__body">
+                              <div
+                                class="pf-v6-c-card__body pf-v6-u-text-align-center pf-v6-u-text-align-start-on-sm"
+                              >
                                 <p class="pf-v6-u-mb-md">{{ .description }}</p>
 
                                 <div class="pf-v6-c-label-group">
