fix: Use shorter date format to allow for overflow-less display of project cards, display user names right underneat user display names

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -271,7 +271,7 @@
                                       aria-hidden="true"
                                     ></i>
                                     <span class="pf-v6-u-ml-sm"
-                                      >{{ .date | time.Format ":date_long" }}</span
+                                      >{{ .date | time.Format ":date_medium" }}</span
                                     >
                                   </div>
                                 </div>
