--- a/layouts/partials/twitterfeed.html
+++ b/layouts/partials/twitterfeed.html
@@ -120,7 +120,7 @@
     header.appendChild(userPic);
 
     const usernames = document.createElement("div")
-    usernames.classList.add("pf-v6-l-flex", "pf-m-justify-content-center", "pf-m-align-items-start", "pf-m-space-items-sm", "pf-v6-u-flex-direction-column")
+    usernames.classList.add("pf-v6-u-display-flex", "pf-v6-u-flex-direction-column")
 
     const userDisplayName = document.createElement("span");
     userDisplayName.innerText = twitterFeed.userDisplayName;
