fix: Use symmetric padding for last commit header

--- a/layouts/partials/lastcommit.html
+++ b/layouts/partials/lastcommit.html
@@ -27,7 +27,7 @@
             </div>
 
             <div
-              class="pf-v6-c-code-block__actions-item pf-v6-u-pb-sm pf-v6-u-pt-sm-on-lg pf-v6-u-pr-md"
+              class="pf-v6-c-code-block__actions-item pf-v6-u-pb-sm pf-v6-u-pt-sm-on-lg"
             >
               <a class="lastcommit__repo__url" target="_blank">
                 <i class="fas fa-code-branch" aria-hidden="true"></i>
