--- a/layouts/partials/blueskyfeed.html
+++ b/layouts/partials/blueskyfeed.html
@@ -81,7 +81,7 @@
     card.classList.add("pf-v6-c-card", "pf-m-plain", "pf-m-clickable")
     card.target = "_blank";
     card.href = tweet.url;
-    card.classList.add("pf-v6-u-color-100", "pf-v6-l-flex", "pf-v6-u-flex-direction-column", "pf-m-space-items-sm", "pf-m-align-items-flex-start", "pf-v6-c-card__body", "pf-v6-u-p-md", "pf-v6-x-m-no-decoration")
+    card.classList.add("pf-v6-u-color-100", "pf-v6-display-flex", "pf-v6-u-flex-direction-column", "pf-m-align-items-flex-start", "pf-v6-c-card__body", "pf-v6-u-p-md", "pf-v6-x-m-no-decoration")
 
     const header = document.createElement("div")
     header.classList.add("pf-v6-u-mb-sm", "pf-v6-l-flex", "pf-m-align-items-center")
@@ -89,7 +89,7 @@
     const userPic = document.createElement("img");
     userPic.src = blueskyFeed.userProfilePictureURL;
     userPic.alt = `Profile picture of ${blueskyFeed.userDisplayName}`;
-    userPic.classList.add("pf-v6-c-avatar", "pf-v6-u-mr-sm")
+    userPic.classList.add("pf-v6-c-avatar", "pf-v6-x-c-avatar--social", "pf-v6-u-mr-sm")
     header.appendChild(userPic);
 
     const usernames = document.createElement("div")
@@ -97,12 +97,18 @@
 
     const userDisplayName = document.createElement("span");
     userDisplayName.innerText = blueskyFeed.userDisplayName;
+    userDisplayName.classList.add("pf-v6-x-c-avatar--social__suffix--end")
     usernames.appendChild(userDisplayName);
 
     const userName = document.createElement("span");
     userName.innerText = " @"+blueskyFeed.username;
-    userName.classList.add("pf-v6-u-color-200")
+    userName.classList.add("pf-v6-u-color-200", "pf-v6-x-c-avatar--social__suffix--center")
     usernames.appendChild(userName);
+
+    const tweetTimestamp = document.createElement("span");
+    tweetTimestamp.innerText = new Date(tweet.timestamp).toLocaleString();
+    tweetTimestamp.classList.add("pf-v6-u-color-200", "pf-v6-x-c-avatar--social__suffix--end")
+    usernames.appendChild(tweetTimestamp);
 
     header.appendChild(usernames);
 
@@ -110,11 +116,6 @@
 
     const content = document.createElement("div")
     content.classList.add("pf-v6-u-w-100")
-
-    const tweetTimestamp = document.createElement("span");
-    tweetTimestamp.innerText = new Date(tweet.timestamp).toLocaleString();
-    tweetTimestamp.classList.add("pf-v6-u-color-200")
-    content.appendChild(tweetTimestamp);
 
     const tweetBody = document.createElement("div");
     tweetBody.innerHTML = tweet.body;
