--- a/layouts/partials/twitterfeed.html
+++ b/layouts/partials/twitterfeed.html
@@ -108,7 +108,7 @@
     card.classList.add("pf-v6-c-card", "pf-m-plain", "pf-m-clickable")
     card.target = "_blank";
     card.href = tweet.url;
-    card.classList.add("pf-v6-u-color-100", "pf-v6-l-flex", "pf-v6-u-flex-direction-column", "pf-m-space-items-sm", "pf-m-align-items-flex-start", "pf-v6-c-card__body", "pf-v6-u-p-md", "pf-v6-x-m-no-decoration")
+    card.classList.add("pf-v6-u-color-100", "pf-v6-display-flex", "pf-v6-u-flex-direction-column", "pf-m-align-items-flex-start", "pf-v6-c-card__body", "pf-v6-u-p-md", "pf-v6-x-m-no-decoration")
 
     const header = document.createElement("div")
     header.classList.add("pf-v6-u-mb-sm", "pf-v6-l-flex", "pf-m-align-items-center")
@@ -116,7 +116,7 @@
     const userPic = document.createElement("img");
     userPic.src = twitterFeed.userProfilePictureURL;
     userPic.alt = `Profile picture of ${twitterFeed.userDisplayName}`;
-    userPic.classList.add("pf-v6-c-avatar", "pf-v6-u-mr-sm")
+    userPic.classList.add("pf-v6-c-avatar", "pf-v6-x-c-avatar--social", "pf-v6-u-mr-sm")
     header.appendChild(userPic);
 
     const usernames = document.createElement("div")
@@ -124,7 +124,13 @@
 
     const userDisplayName = document.createElement("span");
     userDisplayName.innerText = twitterFeed.userDisplayName;
+    userDisplayName.classList.add("pf-v6-x-c-avatar--social__suffix--end")
     usernames.appendChild(userDisplayName);
+
+    const tweetTimestamp = document.createElement("span");
+    tweetTimestamp.innerText = new Date(tweet.timestamp).toLocaleString();
+    tweetTimestamp.classList.add("pf-v6-u-color-200", "pf-v6-x-c-avatar--social__suffix--end")
+    usernames.appendChild(tweetTimestamp);
 
     const userName = document.createElement("span");
     userName.innerText = " @"+twitterFeed.username;
@@ -137,11 +143,6 @@
 
     const content = document.createElement("div")
     content.classList.add("pf-v6-u-w-100")
-
-    const tweetTimestamp = document.createElement("span");
-    tweetTimestamp.innerText = new Date(tweet.timestamp).toLocaleString();
-    tweetTimestamp.classList.add("pf-v6-u-color-200")
-    content.appendChild(tweetTimestamp);
 
     const tweetBody = document.createElement("div");
     tweetBody.innerHTML = tweet.body;
