--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "header" }}
   <header
-    class="pf-v6-c-page__header pf-v6-c-page__header--max-width pf-v6-c-page__header--overlay pf-v6-c-page__header--overlay--index pf-v6-x-u-white-space-nowrap pf-v6-x-u-overflow-x-auto"
+    class="pf-v6-c-page__header pf-v6-c-page__header--index pf-v6-c-page__header--max-width pf-v6-c-page__header--overlay pf-v6-c-page__header--overlay--index pf-v6-x-u-white-space-nowrap pf-v6-x-u-overflow-x-auto"
   >
     <div class="pf-v6-c-page__header__content--max-width">
       {{ if .Site.Data.integrations.spotify.enabled }}
